[gd_scene load_steps=11 format=3 uid="uid://b5bg4fgya03lg"]

[ext_resource type="Script" path="res://Main Menu/Main Menu.gd" id="1_3crsc"]
[ext_resource type="Texture2D" uid="uid://wqiy5432o5mr" path="res://UI_Assets/Sprite_Menu_Background.jpg" id="1_t0dfu"]
[ext_resource type="Texture2D" uid="uid://cpf2oqp0gqkpf" path="res://UI_Assets/Sprite_Button_NewGame.png" id="2_v3sxy"]
[ext_resource type="Texture2D" uid="uid://dbsteaawrkcht" path="res://UI_Assets/Sprite_Button_NewGame_Hovered.png" id="3_hhhb2"]
[ext_resource type="Texture2D" uid="uid://c65bw3wuf42nk" path="res://UI_Assets/Sprite_Button_ExtractedHeroes.png" id="4_slmeb"]
[ext_resource type="Texture2D" uid="uid://w42b6ygkhmuv" path="res://UI_Assets/Sprite_Button_ExtractedHeroes_Hovered.png" id="5_u17kw"]
[ext_resource type="Texture2D" uid="uid://cgvy4pfajojuw" path="res://UI_Assets/Sprite_Button_Options.png" id="6_57kqu"]
[ext_resource type="Texture2D" uid="uid://bce8qtlty3rw" path="res://UI_Assets/Sprite_Button_Options_Hovered.png" id="7_ioom6"]
[ext_resource type="Texture2D" uid="uid://dqrb3iyxmuo7j" path="res://UI_Assets/Sprite_Button_Quit.png" id="8_2ek7h"]
[ext_resource type="Texture2D" uid="uid://6ehxr4fxufok" path="res://UI_Assets/Sprite_Button_Quit_Hovered.png" id="9_00nlv"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3crsc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_t0dfu")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 67.0
offset_top = 39.0
offset_right = 615.0
offset_bottom = 471.0
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Button_NewGame" type="TextureButton" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_v3sxy")
texture_hover = ExtResource("3_hhhb2")

[node name="Button_ExtractedHeroes" type="TextureButton" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("4_slmeb")
texture_hover = ExtResource("5_u17kw")

[node name="Button_Options" type="TextureButton" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("6_57kqu")
texture_hover = ExtResource("7_ioom6")

[node name="Spacer" type="Control" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button_Quit" type="TextureButton" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("8_2ek7h")
texture_hover = ExtResource("9_00nlv")

[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Button_NewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Button_ExtractedHeroes" to="." method="_on_button_extracted_heroes_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Button_Options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
